# shunbun

./: .commit-template.txt  .gitignore  .tool-versions  README.md
app/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
app/core/: array.mts  array.test.mts  datetime.mts  errors.mts  file.mts  file.test.mts  logger.mts  result.mts  result.test.mts  types.mts
app/crawler/: downloader.mts  index.mts  index.test.mts  rss.mts
app/crawler/core/: datetime.test.mts  logger.mts  types.mts
app/crawler/crawler/: index.test.mts
app/crawler/extractor/: index.mts  index.test.mts  rss.mts  rss.test.mts
app/crawler/recorder/: index.mts
app/crawler/transcriber/: index.mts
app/downloader/: fetch.mts  index.mts  index.test.mts
app/io/: index.mts
app/io/local/: channel.mts  episode.mts  stored.mts  transcript.mts
app/prisma/: schema.prisma
app/recorder/: index.mts
app/script/local/: run-all.mts  run-crawler.mts  run-recorder.mts  run-transcriber.mts
app/transcriber/: index.mts
app/web/: components.tsx  index.ts  index.tsx  server.ts
app/web/components/: index.ts
docker/: docker-compose.yml
docker/initdb.d/: 00-db.sql  01-user.sql
docs/: design.md
infra/envs/development/: .env.example  locals.tf  outputs.tf  providers.tf  terraform.tf
infra/envs/production/: .env.example
mig-tmp/app/: .eslintrc.json  package-lock.json
mig-tmp/app/prisma/: seed.mts
mig-tmp/app/web/: renderer.tsx
mig-tmp/docs/: design.md
mig-tmp/transcriber/api/: server.py
transcriber/: pyproject.toml
transcriber/api/: server.py
(+24 files in other folders)
